CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(ProjectEuler C CXX)

# Variables
SET(DEBUG_FLAGS "-ggdb -Wall -Wextra -Winline -Wfatal-errors -pedantic")
IF(${CMAKE_CXX_COMPILER_VERSION} VERSION_GREATER 4.8.0)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
ENDIF(${CMAKE_CXX_COMPILER_VERSION} VERSION_GREATER 4.8.0)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_REENTRANT ${DEBUG_FLAGS}")
MESSAGE("CXX Flags: ${CMAKE_CXX_FLAGS}")

SET(BOOST_ROOT  "${CMAKE_SOURCE_DIR}/libs")
SET(GTEST_ROOT  "${BOOST_ROOT}")
SET(CXX_LIB    "my_cpp")

FIND_PACKAGE(Boost 1.46.0 REQUIRED chrono date_time filesystem regex system thread)
FIND_PACKAGE(GTest 1.7 REQUIRED)
FIND_PACKAGE(Threads REQUIRED)

SET(SYS_LIBS
    ${Boost_LIBRARIES}
    ${CMAKE_THREAD_LIBS_INIT}
    ${GTEST_BOTH_LIBRARIES}
)
INCLUDE_DIRECTORIES(
    ${Boost_INCLUDE_DIR}
    ${GTEST_INCLUDE_DIRS}
    "${CMAKE_CURRENT_SOURCE_DIR}/src"
    "${CMAKE_CURRENT_SOURCE_DIR}/cpplib"
)

ADD_SUBDIRECTORY(src)
#ADD_SUBDIRECTORY(test)
# Debug
#GET_CMAKE_PROPERTY(_variablenames variables)
#FOREACH (_variablename ${_variablenames})
    #MESSAGE(STATUS "${_variableName}=${${_variableName}}")
#ENDFOREACH(_variablename)
