ADD_EXECUTABLE(Euler001 "${CMAKE_CURRENT_SOURCE_DIR}/problem001.c")
TARGET_LINK_LIBRARIES(Euler001 ${CLIB})

ADD_EXECUTABLE(Euler002 "${CMAKE_CURRENT_SOURCE_DIR}/problem002.c")
TARGET_LINK_LIBRARIES(Euler002 ${CLIB})

ADD_EXECUTABLE(Euler003 "${CMAKE_CURRENT_SOURCE_DIR}/problem003.c")
TARGET_LINK_LIBRARIES(Euler003 ${CLIB})

ADD_EXECUTABLE(Euler004 "${CMAKE_CURRENT_SOURCE_DIR}/problem004.c")
TARGET_LINK_LIBRARIES(Euler004 ${CLIB})

ADD_EXECUTABLE(Euler005 "${CMAKE_CURRENT_SOURCE_DIR}/problem005.c")
TARGET_LINK_LIBRARIES(Euler005 ${CLIB})

ADD_EXECUTABLE(Euler006 "${CMAKE_CURRENT_SOURCE_DIR}/problem006.c")
TARGET_LINK_LIBRARIES(Euler006 ${CLIB})

ADD_EXECUTABLE(Euler008 "${CMAKE_CURRENT_SOURCE_DIR}/problem008.c")
TARGET_LINK_LIBRARIES(Euler008 ${CLIB} m)

ADD_EXECUTABLE(Euler009 "${CMAKE_CURRENT_SOURCE_DIR}/problem009.c")
TARGET_LINK_LIBRARIES(Euler009 ${CLIB})

ADD_EXECUTABLE(Euler010 "${CMAKE_CURRENT_SOURCE_DIR}/problem010.c")
TARGET_LINK_LIBRARIES(Euler010 ${CLIB})

ADD_EXECUTABLE(Euler014 "${CMAKE_CURRENT_SOURCE_DIR}/problem014.c")
TARGET_LINK_LIBRARIES(Euler014 ${CLIB})
