ADD_EXECUTABLE(Euler001 "${CMAKE_CURRENT_SOURCE_DIR}/problem001.cpp")
TARGET_LINK_LIBRARIES(Euler001 ${SYS_LIBS})

ADD_EXECUTABLE(Euler002 "${CMAKE_CURRENT_SOURCE_DIR}/problem002.cpp")
TARGET_LINK_LIBRARIES(Euler002 ${SYS_LIBS})

ADD_EXECUTABLE(Euler003 "${CMAKE_CURRENT_SOURCE_DIR}/problem003.cpp")
TARGET_LINK_LIBRARIES(Euler003 ${SYS_LIBS})

ADD_EXECUTABLE(Euler004 "${CMAKE_CURRENT_SOURCE_DIR}/problem004.cpp")
TARGET_LINK_LIBRARIES(Euler004 ${SYS_LIBS})

ADD_EXECUTABLE(Euler005 "${CMAKE_CURRENT_SOURCE_DIR}/problem005.cpp")
TARGET_LINK_LIBRARIES(Euler005 ${SYS_LIBS})

ADD_EXECUTABLE(Euler006 "${CMAKE_CURRENT_SOURCE_DIR}/problem006.cpp")
TARGET_LINK_LIBRARIES(Euler006 ${SYS_LIBS})

ADD_EXECUTABLE(Euler007 "${CMAKE_CURRENT_SOURCE_DIR}/problem007.cpp")
TARGET_LINK_LIBRARIES(Euler007 ${SYS_LIBS})

ADD_EXECUTABLE(Euler012 "${CMAKE_CURRENT_SOURCE_DIR}/problem012.cpp")
TARGET_LINK_LIBRARIES(Euler012 ${SYS_LIBS})

ADD_EXECUTABLE(Euler013 "${CMAKE_CURRENT_SOURCE_DIR}/problem013.cpp")
TARGET_LINK_LIBRARIES(Euler013 ${SYS_LIBS})

ADD_EXECUTABLE(Euler016 "${CMAKE_CURRENT_SOURCE_DIR}/problem016.cpp")
TARGET_LINK_LIBRARIES(Euler016 ${SYS_LIBS})

ADD_EXECUTABLE(Euler017 "${CMAKE_CURRENT_SOURCE_DIR}/problem017.cpp")
TARGET_LINK_LIBRARIES(Euler017 ${SYS_LIBS})

ADD_EXECUTABLE(Euler019 "${CMAKE_CURRENT_SOURCE_DIR}/problem019.cpp")
TARGET_LINK_LIBRARIES(Euler019 ${SYS_LIBS})

ADD_EXECUTABLE(Euler020 "${CMAKE_CURRENT_SOURCE_DIR}/problem020.cpp")
TARGET_LINK_LIBRARIES(Euler020 ${SYS_LIBS})

ADD_EXECUTABLE(Euler022 "${CMAKE_CURRENT_SOURCE_DIR}/problem022.cpp")
TARGET_LINK_LIBRARIES(Euler022 ${SYS_LIBS})

ADD_EXECUTABLE(Euler021 "${CMAKE_CURRENT_SOURCE_DIR}/problem021.cpp")
TARGET_LINK_LIBRARIES(Euler021 ${SYS_LIBS})

ADD_EXECUTABLE(Euler023 "${CMAKE_CURRENT_SOURCE_DIR}/problem023.cpp")
TARGET_LINK_LIBRARIES(Euler023 ${SYS_LIBS})

ADD_EXECUTABLE(Euler025 "${CMAKE_CURRENT_SOURCE_DIR}/problem025.cpp")
TARGET_LINK_LIBRARIES(Euler025 ${SYS_LIBS})

ADD_EXECUTABLE(Euler027 "${CMAKE_CURRENT_SOURCE_DIR}/problem027.cpp")
TARGET_LINK_LIBRARIES(Euler027 ${SYS_LIBS})

ADD_EXECUTABLE(Euler028 "${CMAKE_CURRENT_SOURCE_DIR}/problem028.cpp")
TARGET_LINK_LIBRARIES(Euler028 ${SYS_LIBS})

ADD_EXECUTABLE(Euler029 "${CMAKE_CURRENT_SOURCE_DIR}/problem029.cpp")
TARGET_LINK_LIBRARIES(Euler029 ${SYS_LIBS})

ADD_EXECUTABLE(Euler030 "${CMAKE_CURRENT_SOURCE_DIR}/problem030.cpp")
TARGET_LINK_LIBRARIES(Euler030 ${SYS_LIBS})

ADD_EXECUTABLE(Euler034 "${CMAKE_CURRENT_SOURCE_DIR}/problem034.cpp")
TARGET_LINK_LIBRARIES(Euler034 ${SYS_LIBS})

ADD_EXECUTABLE(Euler035 "${CMAKE_CURRENT_SOURCE_DIR}/problem035.cpp")
TARGET_LINK_LIBRARIES(Euler035 ${SYS_LIBS})
