ADD_EXECUTABLE(Euler001.exe "${CMAKE_CURRENT_SOURCE_DIR}/problem001.cpp")
TARGET_LINK_LIBRARIES(Euler001.exe ${SYS_LIBS})

ADD_EXECUTABLE(Euler002.exe "${CMAKE_CURRENT_SOURCE_DIR}/problem002.cpp")
TARGET_LINK_LIBRARIES(Euler002.exe ${SYS_LIBS})

ADD_EXECUTABLE(Euler003.exe "${CMAKE_CURRENT_SOURCE_DIR}/problem003.cpp")
TARGET_LINK_LIBRARIES(Euler003.exe ${SYS_LIBS})

ADD_EXECUTABLE(Euler004.exe "${CMAKE_CURRENT_SOURCE_DIR}/problem004.cpp")
TARGET_LINK_LIBRARIES(Euler004.exe ${SYS_LIBS})

ADD_EXECUTABLE(Euler005.exe "${CMAKE_CURRENT_SOURCE_DIR}/problem005.cpp")
TARGET_LINK_LIBRARIES(Euler005.exe ${SYS_LIBS})

ADD_EXECUTABLE(Euler006.exe "${CMAKE_CURRENT_SOURCE_DIR}/problem006.cpp")
TARGET_LINK_LIBRARIES(Euler006.exe ${SYS_LIBS})

ADD_EXECUTABLE(Euler007.exe "${CMAKE_CURRENT_SOURCE_DIR}/problem007.cpp")
TARGET_LINK_LIBRARIES(Euler007.exe ${SYS_LIBS})

ADD_EXECUTABLE(Euler008.exe "${CMAKE_CURRENT_SOURCE_DIR}/problem008.cpp")
TARGET_LINK_LIBRARIES(Euler008.exe ${SYS_LIBS})

ADD_EXECUTABLE(Euler009.exe "${CMAKE_CURRENT_SOURCE_DIR}/problem009.cpp")
TARGET_LINK_LIBRARIES(Euler009.exe ${SYS_LIBS})

ADD_EXECUTABLE(Euler010.exe "${CMAKE_CURRENT_SOURCE_DIR}/problem010.cpp")
TARGET_LINK_LIBRARIES(Euler010.exe ${SYS_LIBS})

ADD_EXECUTABLE(Euler011.exe "${CMAKE_CURRENT_SOURCE_DIR}/problem011.cpp")
TARGET_LINK_LIBRARIES(Euler011.exe ${SYS_LIBS})

ADD_EXECUTABLE(Euler012.exe "${CMAKE_CURRENT_SOURCE_DIR}/problem012.cpp")
TARGET_LINK_LIBRARIES(Euler012.exe ${SYS_LIBS})

ADD_EXECUTABLE(Euler013.exe "${CMAKE_CURRENT_SOURCE_DIR}/problem013.cpp")
TARGET_LINK_LIBRARIES(Euler013.exe ${SYS_LIBS})

ADD_EXECUTABLE(Euler014.exe "${CMAKE_CURRENT_SOURCE_DIR}/problem014.cpp")
TARGET_LINK_LIBRARIES(Euler014.exe ${SYS_LIBS})

ADD_EXECUTABLE(Euler016.exe "${CMAKE_CURRENT_SOURCE_DIR}/problem016.cpp")
TARGET_LINK_LIBRARIES(Euler016.exe ${SYS_LIBS})

ADD_EXECUTABLE(Euler017.exe "${CMAKE_CURRENT_SOURCE_DIR}/problem017.cpp")
TARGET_LINK_LIBRARIES(Euler017.exe ${SYS_LIBS})

ADD_EXECUTABLE(Euler018.exe "${CMAKE_CURRENT_SOURCE_DIR}/problem018.cpp")
TARGET_LINK_LIBRARIES(Euler018.exe ${SYS_LIBS})

ADD_EXECUTABLE(Euler019.exe "${CMAKE_CURRENT_SOURCE_DIR}/problem019.cpp")
TARGET_LINK_LIBRARIES(Euler019.exe ${SYS_LIBS})

ADD_EXECUTABLE(Euler020.exe "${CMAKE_CURRENT_SOURCE_DIR}/problem020.cpp")
TARGET_LINK_LIBRARIES(Euler020.exe ${SYS_LIBS})

ADD_EXECUTABLE(Euler022.exe "${CMAKE_CURRENT_SOURCE_DIR}/problem022.cpp")
TARGET_LINK_LIBRARIES(Euler022.exe ${SYS_LIBS})

ADD_EXECUTABLE(Euler021.exe "${CMAKE_CURRENT_SOURCE_DIR}/problem021.cpp")
TARGET_LINK_LIBRARIES(Euler021.exe ${SYS_LIBS})

ADD_EXECUTABLE(Euler023.exe "${CMAKE_CURRENT_SOURCE_DIR}/problem023.cpp")
TARGET_LINK_LIBRARIES(Euler023.exe ${SYS_LIBS})

ADD_EXECUTABLE(Euler025.exe "${CMAKE_CURRENT_SOURCE_DIR}/problem025.cpp")
TARGET_LINK_LIBRARIES(Euler025.exe ${SYS_LIBS})

ADD_EXECUTABLE(Euler027.exe "${CMAKE_CURRENT_SOURCE_DIR}/problem027.cpp")
TARGET_LINK_LIBRARIES(Euler027.exe ${SYS_LIBS})

ADD_EXECUTABLE(Euler028.exe "${CMAKE_CURRENT_SOURCE_DIR}/problem028.cpp")
TARGET_LINK_LIBRARIES(Euler028.exe ${SYS_LIBS})

ADD_EXECUTABLE(Euler029.exe "${CMAKE_CURRENT_SOURCE_DIR}/problem029.cpp")
TARGET_LINK_LIBRARIES(Euler029.exe ${SYS_LIBS})

ADD_EXECUTABLE(Euler030.exe "${CMAKE_CURRENT_SOURCE_DIR}/problem030.cpp")
TARGET_LINK_LIBRARIES(Euler030.exe ${SYS_LIBS})

ADD_EXECUTABLE(Euler032.exe "${CMAKE_CURRENT_SOURCE_DIR}/problem032.cpp")
TARGET_LINK_LIBRARIES(Euler032.exe ${SYS_LIBS})

ADD_EXECUTABLE(Euler033.exe "${CMAKE_CURRENT_SOURCE_DIR}/problem033.cpp")
TARGET_LINK_LIBRARIES(Euler033.exe ${SYS_LIBS})

ADD_EXECUTABLE(Euler034.exe "${CMAKE_CURRENT_SOURCE_DIR}/problem034.cpp")
TARGET_LINK_LIBRARIES(Euler034.exe ${SYS_LIBS})

ADD_EXECUTABLE(Euler035.exe "${CMAKE_CURRENT_SOURCE_DIR}/problem035.cpp")
TARGET_LINK_LIBRARIES(Euler035.exe ${SYS_LIBS})

ADD_EXECUTABLE(Euler036.exe "${CMAKE_CURRENT_SOURCE_DIR}/problem036.cpp")
TARGET_LINK_LIBRARIES(Euler036.exe ${SYS_LIBS})

ADD_EXECUTABLE(Euler037.exe "${CMAKE_CURRENT_SOURCE_DIR}/problem037.cpp")
TARGET_LINK_LIBRARIES(Euler037.exe ${SYS_LIBS})

ADD_EXECUTABLE(Euler039.exe "${CMAKE_CURRENT_SOURCE_DIR}/problem039.cpp")
TARGET_LINK_LIBRARIES(Euler039.exe ${SYS_LIBS})

ADD_EXECUTABLE(Euler041.exe "${CMAKE_CURRENT_SOURCE_DIR}/problem041.cpp")
TARGET_LINK_LIBRARIES(Euler041.exe ${SYS_LIBS})

ADD_EXECUTABLE(Euler049.exe "${CMAKE_CURRENT_SOURCE_DIR}/problem049.cpp")
TARGET_LINK_LIBRARIES(Euler049.exe ${SYS_LIBS})

ADD_EXECUTABLE(Euler054.exe "${CMAKE_CURRENT_SOURCE_DIR}/problem054.cpp")
TARGET_LINK_LIBRARIES(Euler054.exe ${SYS_LIBS})

ADD_EXECUTABLE(Euler067.exe "${CMAKE_CURRENT_SOURCE_DIR}/problem067.cpp")
TARGET_LINK_LIBRARIES(Euler067.exe ${SYS_LIBS})

ADD_EXECUTABLE(Euler074.exe "${CMAKE_CURRENT_SOURCE_DIR}/problem074.cpp")
TARGET_LINK_LIBRARIES(Euler074.exe ${SYS_LIBS})

ADD_EXECUTABLE(Euler081.exe "${CMAKE_CURRENT_SOURCE_DIR}/problem081.cpp")
TARGET_LINK_LIBRARIES(Euler081.exe ${SYS_LIBS})

ADD_EXECUTABLE(Euler082.exe "${CMAKE_CURRENT_SOURCE_DIR}/problem082.cpp")
TARGET_LINK_LIBRARIES(Euler082.exe ${SYS_LIBS})

ADD_EXECUTABLE(Euler083.exe "${CMAKE_CURRENT_SOURCE_DIR}/problem083.cpp")
TARGET_LINK_LIBRARIES(Euler083.exe ${SYS_LIBS})

ADD_EXECUTABLE(Euler089.exe "${CMAKE_CURRENT_SOURCE_DIR}/problem089.cpp")
TARGET_LINK_LIBRARIES(Euler089.exe ${SYS_LIBS})

ADD_EXECUTABLE(Euler092.exe "${CMAKE_CURRENT_SOURCE_DIR}/problem092.cpp")
TARGET_LINK_LIBRARIES(Euler092.exe ${SYS_LIBS})

ADD_EXECUTABLE(Euler095.exe "${CMAKE_CURRENT_SOURCE_DIR}/problem095.cpp")
TARGET_LINK_LIBRARIES(Euler095.exe ${SYS_LIBS})
