SET(UTIL_LIB_SOURCES
    ${UTIL_LIB_SOURCES}
    "${CMAKE_CURRENT_SOURCE_DIR}/util.cpp"
)

SET(UTIL_LIB_HEADERS
    ${UTIL_LIB_HEADERS}
    "${CMAKE_CURRENT_SOURCE_DIR}/util.hpp"
)

ADD_LIBRARY(
    ${UTIL_LIB}
    STATIC
    ${UTIL_LIB_SOURCES}
    ${UTIL_LIB_HEADERS}
)

ADD_EXECUTABLE(LibTest "${CMAKE_CURRENT_SOURCE_DIR}/util_test.cpp")
TARGET_LINK_LIBRARIES(LibTest ${SYS_LIBS} ${UTIL_LIB})
